--- a/my-favorite-book-summaries/src/index.css
+++ b/my-favorite-book-summaries/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.popularity-container{
+  display: flex;
+  align-items: center;
+}
+
+.star--class{
+  width:25px;
+  height: auto;
+}
