--- a/my-favorite-book-summaries/src/index.css
+++ b/my-favorite-book-summaries/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',"DejaVu Sans",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -11,13 +11,27 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+@font-face {
+  font-family: 'Great Vibes Regular';
+  src: local('Great Vibes Regular'), url('./assets/fonts/Great Vibes Regular.ttf') format('truetype');
+}
 
-.popularity-container{
+nav{
+  color:blue;
+  font-size: 4rem;
+  font-family: "Great Vibes Regular" , sans-serif;
+  /* font-family: 'Calligraphy', sans-serif; */
+  text-align: center;
+  background-color: rgb(178, 173, 173);
+  margin-bottom: 20px;
+
+}
+#popularity-container{
   display: flex;
   align-items: center;
 }
 
-.star--class{
+#star--class{
   width:25px;
   height: auto;
 }
