change the alignment of the title and stars and include an id to the price

--- a/my-favorite-book-summaries/src/index.css
+++ b/my-favorite-book-summaries/src/index.css
@@ -58,6 +58,14 @@ to make the img flex item so we can center it. */
   align-self: center;
 }
 
+/* making the stats go next to the title */
+#title-and-stats{
+  display: flex; 
+  justify-content: space-around;
+}
+/* #title-and-stats > h3 #popularity-container{
+
+} */
 
 
 
