added box-shadow and margin and border and i am pretty happy about the look of themobile version

--- a/my-favorite-book-summaries/src/index.css
+++ b/my-favorite-book-summaries/src/index.css
@@ -51,6 +51,9 @@ to make the img flex item so we can center it. */
 #individual-book-container {
   display:flex;
   flex-direction: column;
+  padding:10px;
+  margin-bottom: 50px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
 #individual-book-container > img{
   width: 80%;
